<resources>
    <string name="app_name">MyCalcApp</string>
    <string name="input_value_1">Input value 1</string>
    <string name="compute">Compute</string>
    <string name="result">Result:</string>
    <string name="input_value_2">Input value 2</string>
    <string name="result_label">Result</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
</resources>